--- a/index.html
+++ b/index.html
@@ -33,17 +33,18 @@
                 <p class="price">$9.99</p>
                 <span class="price__descr" id="per_month">per month</span>
                 <p class="cart__descr" id="daysfree">3 DAYS FREE!</p>
-                <span>$9.99</span>
+                <span class="price_part">$9.99</span>
                 <span class="price__month" id="month">month</span>
             </a>
             </li>
             <li class="cart__link second__cart">
+                <div class="sale">-83%</div>
                 <a href="https://google.com/ " target="_blank">
                     <h2 class="cart__title" id="headline3">Annually</h2>
                     <p class="price">$19.99</p>
                     <span class="price__descr" id="per_year">per year</span>
                     <p class="cart__descr" id="most_popular">MOST POPULAR</p>
-                    <span>$9.99</span>
+                    <span class="price_part">$1.99</span>
                     <span class="price__month" id="month2">month</span>
                 </a>
             </li>
